--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
