--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "lucide-react": "^0.462.0",
     "html2canvas": "^1.4.1",
+    "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.2",
     "react-draggable": "^4.4.6",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^7.0.1",
@@ -38,6 +38,7 @@
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-resizable": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
     "@vitejs/plugin-react": "^4.3.4",
